# my-video-downloader

./: README.md  requirements.txt
data/: meson.build
docs/: ARCHITECTURE.md
po/: POTFILES
src/: download_page.ui  meson.build  window.ui
src/video_downloader/: __init__.py  __main__.py  about_dialog.py  authentication_dialog.py  main.py  meson.build  model.py  playlist_dialog.py  shortcuts_dialog.py  window.py
src/video_downloader/app/: __init__.py  application.py
src/video_downloader/downloader/: yt_dlp_slave.py
src/video_downloader/ui/: __init__.py  download_page.py  window.py
src/video_downloader/util/: diagnose.py  logging.py
tauri-vdl/src/: App.css
tauri-vdl/src-python/: sidecar.py
tauri-vdl/src-tauri/: Cargo.toml  python-sidecar-x86_64-unknown-linux-gnu
tauri-vdl/src-tauri/capabilities/: default.json
tauri-vdl/src-tauri/src/: main.rs
tauri_vdl/: package-lock.json  package.json
tauri_vdl/src/: App.css  App.tsx
tauri_vdl/src-tauri/: tauri.conf.json
tauri_vdl/src-tauri/capabilities/: default.json
tauri_vdl/src-tauri/src/: lib.rs
tauri_vdl/src_python/: sidecar.py
tauri_vdl/tests/: test_security.py  test_sidecar.py
tests/: conftest.py  test_model.py  test_package.py  test_rpc.py  test_util.py
